# legom-calculator

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  Trunk.toml  index.html
css/: print.css  style.css
src/: app.rs  main.rs  store.rs  yew_utils.rs
src/calculator/: consts.rs  formatted_solution.rs  mod.rs  modified_simplex.rs  query.rs
src/ui_components/: added_fertilizers.css  added_fertilizers.rs  collapsible_section.rs  deficite_description.rs  elem_ranges.rs  html_chunks.rs  intro.rs  known_fertilizers.css  known_fertilizers.rs  mixture_solution.css  mixture_solution.rs  mod.rs  positive_float_input.css  positive_float_input.rs  status_bar.css  status_bar.rs  total_mass.rs
