[package]
name = "calculator"
version = "2.0.0"
edition = "2021"

[workspace]
# [features]

[dependencies]
yew = { version = "0.20", features = ["csr"] }
yew-router = "*"
wasm-bindgen = "0.2"
web-sys = {version = "0.3", features=["Window", "Document"]}
gloo-console = "0.2"
nalgebra = "0.32"
thiserror = "1.0"
console_error_panic_hook = "0.1"
stylist = { version = "0.12", features = ["parser", "yew"] }
gloo-storage = "0.2"
serde = "1"

[profile.release]
lto = true
opt-level = 'z'
